--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,6 +2,7 @@
   <div class="m-2 fs-5 fw-bolder text-center border-bottom-blue">メッセージ</div>
   <% @messages.each do |message| %>
     <% if @messages.find_by(sender_id: message.sender_id, receiver_id: message.receiver_id) and @messages.find_by(sender_id: message.receiver_id, receiver_id: message.sender_id) %>
+
       <% if message.sender == current_user %>
         <div class="d-flex border-under">
           <%= image_tag message.receiver.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar d-flex col-2 margin-right-1" if message.receiver.avatar.attached? %>
@@ -14,13 +15,41 @@
             <% end %>
           </div>
         </div>
-      <% else %>
-        <% if message.sender == current_user %>
-          <%= message.receiver.userid %>
-        <% else %>
-          <%= message.sender.userid %>
-        <% end %>
       <% end %>
+
+    <% else %>
+      <% if message.sender == current_user %>
+        <div class="d-flex border-under">
+          <%= image_tag message.receiver.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar d-flex col-2 margin-right-1" if message.receiver.avatar.attached? %>
+          <div>
+            <%= link_to message_path(message.receiver.id), class:"decoration-none color-white" do %>
+              <div class="d=flex flex-column">
+                <div class="fw-bolder fs-6 text-start decoration-none"><%= message.receiver.username %></div>
+                <div class="text-start font-size-text no-wrap"><%= message.receiver.sent_messages.where(receiver_id: current_user.id ).last.content %></div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+
+      <% else %>
+
+        <div class="d-flex border-under">
+          <%= image_tag message.sender.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar d-flex col-2 margin-right-1" if message.sender.avatar.attached? %>
+          <div>
+            <%= link_to message_path(message.sender.id), class:"decoration-none color-white" do %>
+              <div class="d=flex flex-column">
+                <div class="fw-bolder fs-6 text-start decoration-none"><%= message.sender.username %></div>
+                <div class="text-start font-size-text no-wrap"><%= message.sender.sent_messages.where(receiver_id: current_user.id ).last.content %></div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+
+      <% end %>
+
     <% end %>
+
+
   <% end %>
+
 </div>
