--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,10 @@
 <div class="max-width-700 mx-auto mb-3">
   <div class="m-2 fs-5 fw-bolder text-center border-bottom-blue">メッセージ</div>
-  <% @messages.each do |message| %>
-    <% if @messages.find_by(sender_id: message.sender_id, receiver_id: message.receiver_id) and @messages.find_by(sender_id: message.receiver_id, receiver_id: message.sender_id) %>
+  <% @my_messages.each do |message| %>
+    <!-- 自分と相手の双方がコメントを送っている場合 -->
+    <% if @my_messages.find_by(sender_id: message.sender_id, receiver_id: message.receiver_id) and @my_messages.find_by(sender_id: message.receiver_id, receiver_id: message.sender_id) %>
 
+    <!-- 自分と相手の双方がコメントを送っている場合に条件分岐で両方表示させてしまうと重複することになるので両方のメッセージがあるときはsenderが自分、receiverが相手のmessageのみを利用することにしてもう片方は無視する仕様にしておく -->
       <% if message.sender == current_user %>
         <div class="d-flex border-under">
           <%= image_tag message.receiver.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar d-flex col-2 margin-right-1" if message.receiver.avatar.attached? %>
@@ -17,7 +19,10 @@
         </div>
       <% end %>
 
+      <!-- 自分と相手の片方しかまだコメントを送っていない場合 -->
     <% else %>
+
+      <!-- ループで取得したmessageの送り主が自分の場合に相手を一覧に表示させる -->
       <% if message.sender == current_user %>
         <div class="d-flex border-under">
           <%= image_tag message.receiver.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar d-flex col-2 margin-right-1" if message.receiver.avatar.attached? %>
@@ -25,12 +30,13 @@
             <%= link_to message_path(message.receiver.id), class:"decoration-none color-white" do %>
               <div class="d=flex flex-column">
                 <div class="fw-bolder fs-6 text-start decoration-none"><%= message.receiver.username %></div>
-                <div class="text-start font-size-text no-wrap"><%= message.receiver.sent_messages.where(receiver_id: current_user.id ).last.content %></div>
+                <div class="text-start font-size-text no-wrap"><%= message.sender.sent_messages.where(receiver_id: message.receiver.id ).last.content %></div>
               </div>
             <% end %>
           </div>
         </div>
 
+        <!-- ループで取得したmessageの送り主が相手の場合に相手を一覧に表示させる -->
       <% else %>
 
         <div class="d-flex border-under">
@@ -39,7 +45,7 @@
             <%= link_to message_path(message.sender.id), class:"decoration-none color-white" do %>
               <div class="d=flex flex-column">
                 <div class="fw-bolder fs-6 text-start decoration-none"><%= message.sender.username %></div>
-                <div class="text-start font-size-text no-wrap"><%= message.sender.sent_messages.where(receiver_id: message.receiver.id ).last.content %></div>
+                <div class="text-start font-size-text no-wrap"><%= message.receiver.sent_messages.where(receiver_id: current_user.id ).last.content %></div>
               </div>
             <% end %>
           </div>
