--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,153 +6,27 @@
         <input id="TAB-01" type="radio" name="TAB" class="tab-switch" checked="checked" /><label class="tab-label" for="TAB-01">全ツイート</label>
         <div class="tab-content">
           <div class="border-5">
-            <%= form_with url: "/tweet/#{current_user.id}", class:"border-4"  do |form| %>
-              <%= form.text_area :content, class:"p-3 w-100 bg-black" %>
-              <div class="border-4">
-                <%= form.label :images, class: "btn btn-secondary" do %>
-                  画像を選択
-                  <%= form.file_field :images, :multiple => true, class:"d-none" %>
-                <% end %>
-                <%= form.submit 'ツイートする', class:"btn btn-primary" %>
-              </div>
-            <% end %>
+            <%= render partial: 'layouts/form' %>
           </div>
           <div class="tab_contents border-4 p-1 w-100" id="menu01">
             <div class="border-4 w-100 bg-primary">
               全てのユーザーのツイートが表示される
             </div>
-            <% @tweets.each do |tweet| %>
-              <div class="d-flex border-under">
-                <%= image_tag tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar d-flex col-2 margin-right-1" if tweet.user.avatar.attached? %>
-                <div>
-                  <%= link_to "/tweet/#{tweet.id}", class:"decoration-none color-white" do %>
-                    <div class="d-flex flex-column">
-                      <div class="fw-bolder fs-6 text-start decoration-none"><%= tweet.user.username %></div>
-                      <div class="text-start font-size-text"><%= tweet.content %></div>
-                    </div>
-                    <div class="d-flex">
-                      <% if tweet.images.attached? %>
-                        <% case tweet.images.size %>
-                        <% when 1 then %>
-                        <% tweet.images.each do |image| %>
-                          <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
-                        <% end %>
-                        <% when 2 then %>
-                        <% tweet.images.each do |image| %>
-                          <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
-                        <% end %>
-                        <% when 3 then %>
-                        <div class="mx-auto">
-                          <% tweet.images.each do |image| %>
-                            <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
-                          <% end %>
-                        </div>
-                        <% when 4 then %>
-                        <% tweet.images.each do |image| %>
-                          <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
-                        <% end %>
-                      <% end %>
-                    <% end %>
-                  </div>
-                <% end %>
-                <div class="d-flex">
-                  <div>
-                    <% unless tweet.user == current_user %>
-                      <%= link_to message_path(tweet.user.id) do %>
-                        <i class="bi bi-envelope"></i>
-                      <% end %>
-                    <% end %>
-                  </div>
-                  <div>返信</div>
-                  <% unless tweet.retweets.find_by(user_id: current_user.id) %>
-                    <%= link_to retweets_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
-                      <i class="bi bi-repeat"></i>
-                    <% end %>
-                  <% else %>
-                    <%= link_to retweets_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
-                      <i class="bi bi-repeat-1"></i>
-                    <% end %>
-                  <% end %>
-                  <div class="ps-1"><%= tweet.retweets.size %></div>
-                  <% unless tweet.favorites.where(user_id: current_user.id).first %>
-                    <%= link_to favorites_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
-                      <i class="bi bi-heart"></i>
-                    <% end %>
-                  <% else %>
-                    <%= link_to favorites_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
-                      <i class="bi bi-heart-fill color-pink"></i>
-                    <% end %>
-                  <% end %>
-                  <div class="ps-1"><%= tweet.favorites.size %></div>
-                  <% unless tweet.bookmarks.find_by(user_id: current_user.id) %>
-                    <%= link_to bookmarks_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
-                      <i class="bi bi-bookmark"></i>
-                    <% end %>
-                  <% else %>
-                    <%= link_to bookmarks_path(params: { id: tweet.id }), data: { turbo_method: :post } do %>
-                      <i class="bi bi-bookmark-fill"></i>
-                    <% end %>
-                  <% end %>
-                  <div class="ps-1"><%= tweet.bookmarks.size %></div>
-                </div>
-              </div>
-            </div>
-          <% end %>
-          <%= paginate @tweets, theme: 'bootstrap-5' %>
-        </div>
-      </div>
-      <input id="TAB-02" type="radio" name="TAB" class="tab-switch" /><label class="tab-label" for="TAB-02">フォロー中</label>
-      <div class="tab-content">
-        <div class="border-5">
-          <%= form_with url: "/tweet/#{current_user.id}", class:"border-4"  do |form| %>
-            <%= form.text_area :content, class:"p-3 w-100 bg-black" %>
-            <div class="border-4">
-              <%= form.label :images, class: "btn btn-secondary" do %>
-                画像を選択
-                <%= form.file_field :images, :multiple => true, class:"d-none" %>
-              <% end %>
-              <%= form.submit 'ツイートする', class:"btn btn-primary" %>
-            </div>
-          <% end %>
-        </div>
-        <div class="tab_contents border-4 p-1 w-100" id="menu02">
-          <div class="border-4 w-100 bg-primary">
-            全てのユーザーのツイートが表示される
+            <%= render partial: 'layouts/all_tweets' %>
           </div>
-          <% @tweets.each do |tweet| %>
-            <div class="w-100">
-              <div class="d-flex">
-                <%= image_tag tweet.user.avatar.variant(resize_to_fit: [1000, 1000]), class:"avatar" if tweet.user.avatar.attached? %>
-                <p class="fw-bolder fs-6"><%= tweet.user.username %></p>
-              </div>
-              <div><%= tweet.content %></div>
-              <div class="d-flex">
-                <% if tweet.images.attached? %>
-                  <% case tweet.images.size %>
-                  <% when 1 then %>
-                  <% tweet.images.each do |image| %>
-                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-100" %>
-                  <% end %>
-                  <% when 2 then %>
-                  <% tweet.images.each do |image| %>
-                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-50" %>
-                  <% end %>
-                  <% when 3 then %>
-                  <div class="mx-auto">
-                    <% tweet.images.each do |image| %>
-                      <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
-                    <% end %>
-                  </div>
-                  <% when 4 then %>
-                  <% tweet.images.each do |image| %>
-                    <%= image_tag image.variant(resize_to_limit: [1000, 1000]), class:"w-25" %>
-                  <% end %>
-                <% end %>
-              </div>
-            <% end %>
+        </div>
+        <input id="TAB-02" type="radio" name="TAB" class="tab-switch" /><label class="tab-label" for="TAB-02">フォロー中</label>
+        <div class="tab-content">
+          <div class="border-5">
+            <%= render partial: 'layouts/form' %>
           </div>
-        <% end %>
-        <%= paginate @tweets, theme: 'bootstrap-5' %>
+          <div class="tab_contents border-4 p-1 w-100" id="menu02">
+            <div class="border-4 w-100 bg-primary">
+              フォロー中のツイートが表示される
+            </div>
+            <%= render partial: 'layouts/follower_tweets' %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
