--- a/app/views/notification_mailer/notification_email.html.erb
+++ b/app/views/notification_mailer/notification_email.html.erb
@@ -4,20 +4,19 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1><%= @user.username %>さんから<%= @action %>が届きました。</h1>
+    <h1><%= @notification.visitor.userid %>さんから<%= @action %>が届きました。</h1>
     <% case @action %>
     <% when "いいね" then %>
-      <p><%= @notification.tweet.content %></p>
+    <p><%= @notification.tweet.content %></p>
     <% when "フォロー" then %>
-      <p><%= @notification.visitor.username %>さんにフォローされました。</p>
+    <p><%= @notification.visitor.username %>さんにフォローされました。</p>
     <% when "リツイート" then %>
-      <p><%= @notification.tweet.content %></p>
+    <p><%= @notification.tweet.content %></p>
     <% when "リプライ" then %>
-      <p><%= @notification.reply.content %></p>
-    <% end %>
-
-    <p>
-      サイトに行って確認するには、<%= @url %>をクリックしてください。
-    </p>
-  </body>
+    <p><%= @notification.reply.content %></p>
+  <% end %>
+  <p>
+    サイトに行って確認するには、<%= @url %>をクリックしてください。
+  </p>
+</body>
 </html>
